[gd_scene load_steps=10 format=2]

[ext_resource path="res://root/bars.gd" type="Script" id=1]
[ext_resource path="res://temporary/selection-mod-suddendeath@2x.png" type="Texture" id=2]
[ext_resource path="res://skins/test_skin/sliderscorepoint.png" type="Texture" id=3]
[ext_resource path="res://temporary/brehd.png" type="Texture" id=4]
[ext_resource path="res://fonts/noto_sans_jp-bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://temporary/circle.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
extra_spacing_top = -4
font_data = ExtResource( 5 )

[node name="Bars" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Top" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
theme_type_variation = "_Top"

[node name="V" type="VBoxContainer" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
theme_type_variation = "SeparationP00"
custom_constants/separation = -6

[node name="Top" type="HBoxContainer" parent="Top/V"]
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "SeparationP07"

[node name="SongInfo" type="Label" parent="Top/V/Top"]
margin_right = 1173.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular030"

[node name="PlayedByText" type="Label" parent="Top/V/Top"]
margin_left = 1180.0
margin_right = 1319.0
margin_bottom = 49.0
theme_type_variation = "FontRegular030"
text = "Played by"

[node name="Name" type="Label" parent="Top/V/Top"]
margin_left = 1326.0
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "FontBold30"
text = "Player"

[node name="Bottom" type="HBoxContainer" parent="Top/V"]
margin_top = 43.0
margin_right = 1420.0
margin_bottom = 92.0
theme_type_variation = "SeparationP07"

[node name="DifficultyRating" type="Label" parent="Top/V/Bottom"]
margin_bottom = 49.0
theme_type_variation = "FontRegular030"

[node name="DifficultyIcon" type="TextureRect" parent="Top/V/Bottom"]
margin_left = 7.0
margin_top = 12.0
margin_right = 32.0
margin_bottom = 37.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ChartInfo" type="Label" parent="Top/V/Bottom"]
margin_left = 39.0
margin_right = 1413.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular030"

[node name="PlayDate" type="Label" parent="Top/V/Bottom"]
margin_left = 1420.0
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "FontRegular030"

[node name="Bottom" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
theme_type_variation = "_Bottom"
custom_styles/panel = SubResource( 3 )

[node name="H" type="HBoxContainer" parent="Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
theme_type_variation = "SeparationP03"

[node name="Back" type="Button" parent="Bottom/H"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
theme_type_variation = "_Bottom"
text = "<<<"

[node name="Button1" type="Button" parent="Bottom/H"]
margin_left = 253.0
margin_right = 503.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
theme_type_variation = "_Bottom"
text = "a"

[node name="Buffer" type="ColorRect" parent="Bottom/H"]
margin_left = 506.0
margin_right = 934.0
margin_bottom = 100.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Button2" type="Button" parent="Bottom/H"]
margin_left = 937.0
margin_right = 1187.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
theme_type_variation = "_Bottom"
text = "b"

[node name="Button3" type="Button" parent="Bottom/H"]
margin_left = 1190.0
margin_right = 1440.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
theme_type_variation = "_Bottom"
text = "c"

[node name="Profile" type="Button" parent="Bottom"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_right = 150.0
grow_horizontal = 2
rect_min_size = Vector2( 350, 0 )
custom_styles/normal = SubResource( 1 )

[node name="Organizer" type="HBoxContainer" parent="Bottom/Profile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0

[node name="ProfilePicture" type="TextureRect" parent="Bottom/Profile/Organizer"]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 88, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="Bottom/Profile/Organizer"]
margin_left = 92.0
margin_right = 217.0
margin_bottom = 88.0
custom_constants/separation = 2

[node name="Name" type="Label" parent="Bottom/Profile/Organizer/Info"]
margin_right = 125.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "rokuhime"

[node name="Subtitle" type="Label" parent="Bottom/Profile/Organizer/Info"]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 44.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular015"
text = "ようこぞ！"

[node name="HSeparator" type="HSeparator" parent="Bottom/Profile/Organizer/Info"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 52.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Bottom/Profile/Organizer/Info"]
margin_top = 54.0
margin_right = 125.0
margin_bottom = 70.0

[node name="Subtitle2" type="Label" parent="Bottom/Profile/Organizer/Info/HBoxContainer"]
margin_right = 63.0
margin_bottom = 16.0
theme_type_variation = "FontRegular015"
text = "Level 435"

[node name="TextureRect" type="TextureRect" parent="Bottom/Profile/Organizer/Info/HBoxContainer"]
margin_left = 67.0
margin_right = 78.0
margin_bottom = 11.0
rect_min_size = Vector2( 11, 11 )
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Accuracy" type="Label" parent="Bottom/Profile/Organizer/Info"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 88.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular015"
text = "100.00% Accuracy"

[node name="Buffer" type="Control" parent="Bottom/Profile/Organizer"]
margin_left = 221.0
margin_right = 236.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="Right" type="VBoxContainer" parent="Bottom/Profile/Organizer"]
margin_left = 240.0
margin_right = 338.0
margin_bottom = 88.0
custom_constants/separation = -1564

[node name="Banners" type="HBoxContainer" parent="Bottom/Profile/Organizer/Right"]
margin_right = 98.0
margin_bottom = 30.0
alignment = 2

[node name="brehd" type="TextureRect" parent="Bottom/Profile/Organizer/Right/Banners"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 4 )
expand = true

[node name="brehd2" type="TextureRect" parent="Bottom/Profile/Organizer/Right/Banners"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 4 )
expand = true

[node name="brehd3" type="TextureRect" parent="Bottom/Profile/Organizer/Right/Banners"]
margin_left = 68.0
margin_right = 98.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 4 )
expand = true

[node name="Buffer" type="Control" parent="Bottom/Profile/Organizer/Right"]
margin_top = -1534.0
margin_right = 98.0
margin_bottom = 1586.0
size_flags_vertical = 3

[node name="Rank" type="Label" parent="Bottom/Profile/Organizer/Right"]
margin_top = 22.0
margin_right = 98.0
margin_bottom = 88.0
theme_type_variation = "FontRegular045"
text = "#1"
align = 2

[connection signal="button_up" from="Bottom/H/Back" to="." method="back_button_pressed"]
